--- a/index.html
+++ b/index.html
@@ -2,28 +2,14 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>我的作品集</title>
+    <title>3D Portfolio</title>
     <style>
-        /* 这里是背景颜色，我设成了深灰色，这样看3D作品比较专业 */
-        body { 
-            background-color: #1a1a1a; 
-            margin: 0; 
-            padding: 40px 0; 
-            display: flex; 
-            flex-direction: column; 
-            align-items: center; 
-        }
-        /* 这里控制图片大小，统一宽度，自动居中 */
-        img { 
-            width: 90%; 
-            max-width: 1000px; 
-            margin-bottom: 30px; 
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5); /* 给图片加一点阴影，更有质感 */
-        }
+        body { background-color: black; color: white; margin: 0; padding: 20px; text-align: center; }
+        img { width: 100%; max-width: 900px; margin-bottom: 20px; display: block; margin-left: auto; margin-right: auto; }
     </style>
 </head>
 <body>
-
+    <h1>My 3D Works</h1>
     < img src="1.jpg">
     < img src="2.jpg">
     < img src="3.jpg">
@@ -31,6 +17,5 @@
     < img src="2025.jpg">
     < img src="2025-1.jpg">
     < img src="111.jpg">
-
 </body>
 </html>
