--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>3D Portfolio</title>
     <style>
-        body { background-color: black; color: white; margin: 0; padding: 20px; text-align: center; }
-        img { width: 100%; max-width: 900px; margin-bottom: 20px; display: block; margin-left: auto; margin-right: auto; }
+        body { background: #000; text-align: center; }
+        img { width: 90%; max-width: 800px; margin: 20px auto; display: block; }
     </style>
 </head>
 <body>
-    <h1>My 3D Works</h1>
     < img src="1.jpg">
     < img src="2.jpg">
     < img src="3.jpg">
