--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <style>
-        body { background: #000; text-align: center; }
-        img { width: 90%; max-width: 800px; margin: 20px auto; display: block; }
-    </style>
-</head>
-<body>
-    < img src="1.jpg">
-    < img src="2.jpg">
-    < img src="3.jpg">
-    < img src="4.jpg">
-    < img src="2025.jpg">
-    < img src="2025-1.jpg">
-    < img src="111.jpg">
+<body style="background-color:black; text-align:center;">
+
+    <h1 style="color:white;">My 3D Works</h1>
+
+    < img src="1.jpg" style="width:90%; margin:10px;">
+    < img src="2.jpg" style="width:90%; margin:10px;">
+    < img src="3.jpg" style="width:90%; margin:10px;">
+    < img src="4.jpg" style="width:90%; margin:10px;">
+    < img src="2025.jpg" style="width:90%; margin:10px;">
+    < img src="2025-1.jpg" style="width:90%; margin:10px;">
+    < img src="111.jpg" style="width:90%; margin:10px;">
+
 </body>
 </html>
