--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             touch-action: none; /* 禁用浏览器默认触摸行为 */
         }
 
-        /* 图片样式 */
+        /* 图片样式：仅轻微降清，保留细节 */
         .portfolio-img {
             width: 70%;
             height: auto;
@@ -55,8 +55,8 @@
             cursor: grab;
             transform-origin: center center;
             transition: transform 0.08s linear;
-            image-rendering: pixelated;
-            filter: blur(0.4px);
+            /* 核心调整：仅极轻微模糊，去掉像素化渲染 */
+            filter: blur(0.1px); 
             pointer-events: auto;
             position: relative;
             z-index: 1;
